--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,14 @@ spring.main.banner-mode=off
 spring.devtools.livereload.enabled=true
 server.port=8888
 server.servlet.context-path=/api-user
+#LOG SPRING SECURITY
+#logging.level.org.springframework.security=TRACE
 
 #H2 CONNECTION
-spring.datasource.url=jdbc:h2:mem:api-user-h2
-spring.datasource.username=api-user-h2-usr
-spring.datasource.password=api-user-h2-pwd
+spring.datasource.url=jdbc:h2:mem:apiuser
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
